--- a/CommandBar/CommandBar/MainPage.xaml
+++ b/CommandBar/CommandBar/MainPage.xaml
@@ -12,10 +12,25 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-       
-        <StackPanel Grid.RowSpan="2" VerticalAlignment="Stretch" Height="Auto">
+
+        <RelativePanel BorderBrush="Gray" BorderThickness="1">
             <MediaElement x:Name="media"/>
-        </StackPanel>
+            <Rectangle x:Name="RedRect" 
+                           Fill="Red" 
+                           Height="100" 
+                           Width="50" 
+                           RelativePanel.LeftOf="media" 
+                           RelativePanel.AlignBottomWith="media" 
+                           RelativePanel.AlignBottomWithPanel="True" 
+                           VerticalAlignment="Bottom"/>
+
+            <Rectangle x:Name="BlueRect" 
+                           Fill="Blue" 
+                           Height="200" 
+                           Width="100" 
+                           RelativePanel.RightOf="RedRect"/>
+        </RelativePanel>
+
         <StackPanel Grid.Row="1" VerticalAlignment="Bottom">
             <StackPanel.Background>
                 <LinearGradientBrush Opacity="0.4">
@@ -23,21 +38,10 @@
                 </LinearGradientBrush>
             </StackPanel.Background>
             <Border Background="Transparent" Width="auto" Height="auto" BorderBrush="LightBlue">
-                <Canvas>
-                    <Canvas.Resources>
-                        <Storyboard x:Name="myStoryboard">
-                            <DoubleAnimation
-                                x:Name="myDoubleAnimation"
-                                Storyboard.TargetProperty="Opacity"
-                                Storyboard.TargetName="myRectangle"/>
-                        </Storyboard>
-                    </Canvas.Resources>
-                    <Rectangle x:Name="myRectangle" Height="50" Fill="Blue" Stroke="LightBlue" 
-                     Canvas.Top="0" Canvas.Left="0" StrokeThickness="3" />
-                </Canvas>
             </Border>
-            <Slider Name="sliderSeek" ValueChanged="media_MediaOpened" KeyDown = "sliderSeek_Pointer_Change_Position" DragStarting="sliderSeek_Dragging_Start" DropCompleted="sliderSeek_Dragging_End"/>    
+            <Slider Name="sliderSeek" ValueChanged="media_MediaOpened" KeyDown = "sliderSeek_Pointer_Change_Position" DragStarting="sliderSeek_Dragging_Start" DropCompleted="sliderSeek_Dragging_End"/>
         </StackPanel>
+
     </Grid>
     <Page.BottomAppBar>
         <CommandBar x:Name="BottomCommand" Height="auto" RenderTransformOrigin="0.5,0.5" IsSticky="False">
