Removed the gradient

--- a/CommandBar/CommandBar/MainPage.xaml
+++ b/CommandBar/CommandBar/MainPage.xaml
@@ -20,14 +20,15 @@
                            Width="50" 
                            RelativePanel.LeftOf="media"
                            RelativePanel.AlignBottomWith="media"/>
-                <Rectangle x:Name="BlueRect" 
-                           Height="{x:Bind TimeAllowance}"
+                <Rectangle x:Name="BlueRect"
+                           Fill="Blue"
+                           Height="700"
                            Width="50" 
                            RelativePanel.RightOf="Filler"
                            RelativePanel.AlignBottomWith="media"/>
                 <Rectangle x:Name="GreenRect"
                            Fill="Green"
-                           Height= "{x:Bind TimeSaved}"
+                           Height= "300"
                            Width="50"
                            RelativePanel.RightOf="BlueRect"
                            RelativePanel.AlignBottomWith="media"/>
